[project]
name = "rubetek_socket_api"
version = "0.0.1"
description = "API wrapper for controlling the Rubetek RE-3305 smart socket."
authors = [
    { name = "regenara", email = "jakebv.22@gmail.com" }
]
license = { file = "LICENSE" }
dependencies = [
    "certifi==2025.1.31",
    "pydantic==2.10.6",
    "aiohttp==3.10.11"
]

dynamic = ["readme"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
