[project]
name = "rubetek_socket_api"
version = "0.0.5"
description = "API wrapper for controlling the Rubetek RE-3305 smart socket."
authors = [
    { name = "regenara", email = "jakebv.22@gmail.com" }
]
license = { file = "LICENSE" }
dependencies = [
    "certifi>=2022.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "aiohttp>=3.0.0,<4.0.0"
]
dynamic = ["readme"]

[project.urls]
repository = "https://github.com/regenara/rubetek_socket_api"
homepage = "https://github.com/regenara/rubetek_socket_api"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
